post runs with node 12 now. package.jsons are revised.

--- a/index/package.json
+++ b/index/package.json
@@ -26,7 +26,9 @@
     "memdown": "1.2.0",
     "search-index": "0.8.15",
     "seneca": "3.3.0",
-    "seneca-demo-logger": "0.2.0"
+    "seneca-balance-client": "0.6.0",
+    "seneca-demo-logger": "0.2.0",
+    "seneca-mesh": "0.10.0"
   },
   "devDependencies": {
     "code": "3.0.2",
