--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,10 @@
     "chairo": "2.2.1",
     "hapi": "15.0.3",
     "seneca": "3.3.0",
+    "seneca-balance-client": "0.6.0",
     "seneca-demo-logger": "0.2.0",
-    "rif": "0.3.0"
+    "seneca-mesh": "0.10.0",
+    "rif": "0.3.0",
+    "wo": "0.8.0"
   }
 }
