--- a/follow/package.json
+++ b/follow/package.json
@@ -24,7 +24,10 @@
   "dependencies": {
     "lodash": "4.15.0",
     "seneca": "3.3.0",
-    "seneca-demo-logger": "0.2.0"
+    "seneca-balance-client": "0.6.0",
+    "seneca-demo-logger": "0.2.0",
+    "seneca-entity": "1.3.0",
+    "seneca-mesh": "0.10.0"
   },
   "devDependencies": {
     "code": "3.0.2",
