--- a/mine/package.json
+++ b/mine/package.json
@@ -27,7 +27,10 @@
     "moment": "2.14.1",
     "rif": "0.3.0",
     "seneca": "3.3.0",
+    "seneca-balance-client": "0.6.0",
     "seneca-demo-logger": "0.2.0",
+    "seneca-entity": "1.3.0",
+    "seneca-mesh": "0.10.0",
     "vision": "4.1.0",
     "wo": "0.8.0"
   }
