--- a/timeline/package.json
+++ b/timeline/package.json
@@ -23,7 +23,11 @@
   "homepage": "https://github.com/Pick1a1username/ramanujan-2020",
   "dependencies": {
     "seneca": "3.3.0",
+    "seneca-balance-client": "0.6.0",
     "seneca-demo-logger": "0.2.0",
+    "seneca-entity": "1.3.0",
+    "seneca-mesh": "0.10.0",
+    "seneca-zipkin-tracer": "0.1.0",
     "lodash": "4.15.0"
   },
   "devDependencies": {
