--- a/front/package.json
+++ b/front/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/Pick1a1username/ramanujan-2020",
   "dependencies": {
-    "hapi": "15.0.3",
-    "inert": "4.0.2",
+    "@hapi/hapi": "20.0.0",
+    "@hapi/inert": "6.0.2",
+    "@hapi/vision": "6.0.1",
+    "handlebars": "4.7.6",
     "rif": "0.3.0",
-    "wo": "0.8.0"
+    "wo": "1.0.0"
   }
 }
