--- a/timeline/package.json
+++ b/timeline/package.json
@@ -22,16 +22,17 @@
   },
   "homepage": "https://github.com/Pick1a1username/ramanujan-2020",
   "dependencies": {
-    "seneca": "3.3.0",
-    "seneca-balance-client": "0.6.0",
+    "seneca": "3.22.0",
+    "seneca-balance-client": "1.2.0",
+    "seneca-basic": "1.0.0",
     "seneca-demo-logger": "0.2.0",
-    "seneca-entity": "1.3.0",
-    "seneca-mesh": "0.10.0",
-    "seneca-zipkin-tracer": "0.1.0",
-    "lodash": "4.15.0"
+    "seneca-entity": "10.0.2",
+    "seneca-mesh": "1.5.0",
+    "seneca-zipkin-tracer": "0.2.0",
+    "lodash": "4.17.20"
   },
   "devDependencies": {
-    "code": "3.0.2",
-    "lab": "11.0.1"
+    "@hapi/code": "^8.0.2",
+    "@hapi/lab": "^23.0.0"
   }
 }
