--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 logs
 *.log
 npm-debug.log*
+nohup.out
 
 # Runtime data
 pids
@@ -36,3 +37,7 @@ node_modules
 *~
 
 node_modules*
+
+
+# Files for Index
+fii
