--- a/api/package.json
+++ b/api/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/Pick1a1username/ramanujan-2020",
   "dependencies": {
-    "chairo": "2.2.1",
-    "hapi": "15.0.3",
-    "seneca": "3.3.0",
+    "chairo": "4.0.0",
+    "@hapi/hapi": "20.0.0",
+    "seneca": "3.22.0",
+    "seneca-balance-client": "1.2.0",
     "seneca-demo-logger": "0.2.0",
-    "rif": "0.3.0"
+    "seneca-mesh": "1.5.0",
+    "rif": "0.3.0",
+    "wo": "1.0.0"
   }
 }
