--- a/index/package.json
+++ b/index/package.json
@@ -4,7 +4,7 @@
   "description": "ramanujan-index",
   "main": "index-service.js",
   "scripts": {
-    "test": "lab -v test -I nil"
+    "test": "lab -v test -I nil,searchableFields,D"
   },
   "repository": {
     "type": "git",
@@ -22,14 +22,17 @@
   },
   "homepage": "https://github.com/Pick1a1username/ramanujan-2020",
   "dependencies": {
-    "levelup": "1.3.3",
-    "memdown": "1.2.0",
-    "search-index": "0.8.15",
-    "seneca": "3.3.0",
-    "seneca-demo-logger": "0.2.0"
+    "encoding-down": "6.3.0",
+    "levelup": "4.4.0",
+    "memdown": "5.1.0",
+    "search-index": "1.0.6",
+    "seneca": "3.22.0",
+    "seneca-balance-client": "1.2.0",
+    "seneca-demo-logger": "0.2.0",
+    "seneca-mesh": "1.5.0"
   },
   "devDependencies": {
-    "code": "3.0.2",
-    "lab": "11.0.1"
+    "@hapi/code": "^8.0.2",
+    "@hapi/lab": "^23.0.0"
   }
 }
