--- a/monitor/package.json
+++ b/monitor/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/Pick1a1username/ramanujan-2020",
   "dependencies": {
-    "seneca": "3.3.0"
+    "seneca": "3.22.0",
+    "seneca-balance-client": "1.2.0",
+    "seneca-demo-logger": "0.2.0",
+    "seneca-mesh": "1.5.0"
   }
 }
